--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
   
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.2
+  shared_preferences: ^2.0.6
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
