--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.2
   shared_preferences: ^2.0.6
   uuid: ^3.0.4
+  flutter_shapes: ^0.3.0
 
 dev_dependencies:
   flutter_test:
