--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
     package="com.example.flutter_application_1">
    <application
         android:label="flutter_application_1"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        
+      >
+        <receiver android:name="com.intivoto.geofence.GeofenceBroadcastReceiver"
+    android:enabled="true" android:exported="true"/>
+<service android:name="com.intivoto.geofence.GeofencePlugin"
+    android:permission="android.permission.BIND_JOB_SERVICE" android:exported="true"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -38,4 +44,8 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 </manifest>
